          not contain packet data at all, monotone no longer uses an excessive
          amount of time and memory to figure this out
          (fixes monotone bug #28799).

        - The 'log' command no longer crashes if it is executed in a workspace
          whose parent revision(s) do not exist in the specified database
          (fixes monotone bug #29677).

        - monotone on Windows will now have a non-zero exit code when
          interrupted (^C). This was broken in 0.47 when it was fixed to not
          throw an exception on being interrupted.

        - In 0.46 and 0.47, monotone could sometimes get confused
          about which revisions were the heads of a particular branch.
          This would happen when a new branch cert was added to a
          revision that was an ancestor of one or more of the current
          heads of the branch, most commonly during netsync when
          multiple people had performed identical merges. This is
          fixed now. 'db check' will identify the problem; if your
          database currently gives incorrect 'heads' results, or 'mtn
          bug' on 'merge', you can fix it by running 'mtn db
          regenerate_caches'.

        - In 0.46, spurious network disconnects could occur when transferring
          sufficiently large items (files, diffs, revisions). This was fixed
          in 0.47 but not noted in the release notes at that time
          (fixes monotone bug #28991).

        Other

        - Support for the diffuse merger (http://diffuse.sourceforge.net)
          has been added.

Sun Mar 14 21:15:06 UTC 2010

        0.47 release.

        Changes

        - The default '<unknown>' author used by the git_export command has
          changed to 'Unknown <unknown>' and must be changed in existing author
          map files. The old '<unknown>' author will be rejected by the new
          validate_git_author lua hook.

        - The 'git_export' command now validates all git author and committer